testdata/test/resources/com/yafred/asn1/test/should_fail/value_not_found.asn
-- referenced value

My-Module DEFINITIONS ::=


BEGIN

a INTEGER ::= b



END
